feat: 处理音色克隆未完成的功能

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -27,6 +27,17 @@
         "phName": "e.g. My Voice",
         "labelKey": "API Key (For authorization)",
         "labelSample": "Voice Sample (Audio File)",
+        "labelPromptFile": "Prompt Audio (Optional)",
+        "labelPromptText": "Prompt Text (Optional)",
+        "phPromptText": "Text corresponding to prompt audio...",
+        "hintPromptFile": "Upload reference audio < 8s to enhance similarity",
+        "labelDemoText": "Demo Text (Optional)",
+        "phDemoText": "Text for demo generation (max 1000 chars)...",
+        "hintDemoText": "Demo will be charged based on character count",
+        "labelModel": "Speech Model",
+        "labelNoiseReduction": "Noise Reduction",
+        "labelVolumeNorm": "Volume Normalization",
+        "labelWatermark": "AIGC Watermark",
         "labelPrompt": "Voice Description (Prompt)",
         "phPrompt": "e.g. A deep, magnetic male voice telling a mystery story...",
         "labelPreview": "Preview Text",
