--- a/web/src/locales/zh.json
+++ b/web/src/locales/zh.json
@@ -27,6 +27,17 @@
         "phName": "例如：我的声音",
         "labelKey": "API 密钥 (用于授权)",
         "labelSample": "语音样本 (音频文件)",
+        "labelPromptFile": "示例音频 (可选)",
+        "labelPromptText": "示例文本 (可选)",
+        "phPromptText": "示例音频对应的文本...",
+        "hintPromptFile": "上传参考音频 < 8秒，可增强相似度",
+        "labelDemoText": "试听文本 (可选)",
+        "phDemoText": "用于生成试听音频的文本 (最多1000字)...",
+        "hintDemoText": "试听将根据字符数正常收取语音合成费用",
+        "labelModel": "语音模型",
+        "labelNoiseReduction": "降噪",
+        "labelVolumeNorm": "音量归一化",
+        "labelWatermark": "AIGC水印",
         "labelPrompt": "音色描述 (Prompt)",
         "phPrompt": "例如：讲述悬疑故事的播音员，声音低沉富有磁性...",
         "labelPreview": "试听文本",
