docs: 添加文件上传接口的OpenAPI文档
添加MiniMax文件管理API的OpenAPI规范文档，包含文件上传接口/v1/files/upload的详细说明，包括请求参数、响应格式和错误码等信息

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -57,11 +57,75 @@
         "syncSuccess": "Sync complete. Added {count} voices."
     },
     "workbench": {
-        "title": "TTS Workbench",
+        "btnUploadFile": "Upload File",
+        "btnUploading": "Uploading...",
+        "title": "Minimax Voice Workbench",
+        "sectionCommon": "Common Settings",
+        "sectionAdvanced": "Advanced Settings",
+        "inputType": {
+            "text": "Text Input",
+            "file": "File Input"
+        },
         "labelKey": "API Key",
         "labelVoice": "Voice",
         "labelSpeed": "Speed",
         "labelVol": "Volume",
+        "labelModel": "Model Version",
+        "labelTextFileId": "Text File ID",
+        "labelPitch": "Pitch",
+        "labelEmotion": "Emotion",
+        "labelLangBoost": "Language Boost",
+        "labelSampleRate": "Sample Rate",
+        "labelBitrate": "Bitrate",
+        "labelFormat": "Format",
+        "labelChannel": "Channel",
+        "labelWatermark": "AIGC Watermark",
+        "labelNorm": "English Normalization",
+        "labelVoiceModify": "Voice Modification",
+        "labelVmPitch": "Pitch Adj",
+        "labelVmIntensity": "Intensity Adj",
+        "labelVmTimbre": "Timbre Adj",
+        "labelVmEffects": "Sound Effects",
+        "labelPronunciationDict": "Pronunciation Dict",
+        "tips": {
+            "model": "Select speech synthesis model version",
+            "text": "Text to synthesize, max 50k chars",
+            "textFileId": "ID of text file to synthesize",
+            "voiceId": "Select voice",
+            "speed": "Speed [0.5, 2.0]",
+            "vol": "Volume (0, 10]",
+            "pitch": "Pitch [-12, 12]",
+            "emotion": "Control speech emotion",
+            "langBoost": "Boost specific language/dialect",
+            "watermark": "Add audio rhythm marker at end",
+            "vmPitch": "Range [-100, 100]",
+            "vmIntensity": "Range [-100, 100]",
+            "vmTimbre": "Range [-100, 100]",
+            "pronunciationDict": "Comma separated, e.g. \"word/pron\", \"word2/pron2\""
+        },
+        "phPronunciationDict": "e.g. \"word/pron\", \"word2/pron2\"",
+        "options": {
+            "auto": "Auto",
+            "happy": "Happy",
+            "sad": "Sad",
+            "angry": "Angry",
+            "fearful": "Fearful",
+            "disgusted": "Disgusted",
+            "surprised": "Surprised",
+            "calm": "Calm",
+            "fluent": "Fluent",
+            "whisper": "Whisper",
+            "none": "None",
+            "spacious_echo": "Spacious Echo",
+            "auditorium_echo": "Auditorium Echo",
+            "lofi_telephone": "Lo-Fi Telephone",
+            "robotic": "Robotic",
+            "chinese": "Chinese",
+            "english": "English",
+            "japanese": "Japanese",
+            "mono": "Mono",
+            "stereo": "Stereo"
+        },
         "modeAsync": "Async Mode (Long Text)",
         "labelText": "Text to Speech",
         "phText": "Enter text here...",
