--- a/web/src/locales/zh.json
+++ b/web/src/locales/zh.json
@@ -57,11 +57,75 @@
         "syncSuccess": "同步完成，新增 {count} 个音色。"
     },
     "workbench": {
-        "title": "语音合成工作台",
+        "btnUploadFile": "上传文件",
+        "btnUploading": "上传中...",
+        "title": "Minimax 语音合成工作台",
+        "sectionCommon": "常用设置",
+        "sectionAdvanced": "高级设置",
+        "inputType": {
+            "text": "文本",
+            "file": "文件"
+        },
         "labelKey": "API 密钥",
         "labelVoice": "音色",
         "labelSpeed": "语速",
         "labelVol": "音量",
+        "labelModel": "模型版本",
+        "labelTextFileId": "文本文件ID",
+        "labelPitch": "语调 (Pitch)",
+        "labelEmotion": "情感 (Emotion)",
+        "labelLangBoost": "语种增强",
+        "labelSampleRate": "采样率",
+        "labelBitrate": "比特率",
+        "labelFormat": "格式",
+        "labelChannel": "声道",
+        "labelWatermark": "AIGC水印",
+        "labelNorm": "英文规范化",
+        "labelVoiceModify": "音色改造",
+        "labelVmPitch": "音高调整",
+        "labelVmIntensity": "强度调整",
+        "labelVmTimbre": "音色调整",
+        "labelVmEffects": "音效",
+        "labelPronunciationDict": "多音字字典",
+        "tips": {
+            "model": "选择语音合成模型版本",
+            "text": "待合成的文本内容，最长5万字符",
+            "textFileId": "待合成的文本文件ID，支持txt/zip",
+            "voiceId": "选择音色",
+            "speed": "语速 [0.5, 2.0]",
+            "vol": "音量 (0, 10]",
+            "pitch": "语调 [-12, 12]",
+            "emotion": "控制合成语音的情绪",
+            "langBoost": "增强特定语种/方言识别",
+            "watermark": "音频末尾添加节奏标识",
+            "vmPitch": "范围 [-100, 100], 低沉/明亮",
+            "vmIntensity": "范围 [-100, 100], 刚劲/轻柔",
+            "vmTimbre": "范围 [-100, 100], 浑厚/清脆",
+            "pronunciationDict": "多音字纠正，使用逗号分隔，例如：\"重/chong2\", \"长/zhang3\""
+        },
+        "phPronunciationDict": "例如：\"燕少飞/(yan4)(shao3)(fei1)\", \"omg/oh my god\"",
+        "options": {
+            "auto": "自动 (Auto)",
+            "happy": "快乐 (Happy)",
+            "sad": "悲伤 (Sad)",
+            "angry": "愤怒 (Angry)",
+            "fearful": "恐惧 (Fearful)",
+            "disgusted": "厌恶 (Disgusted)",
+            "surprised": "惊讶 (Surprised)",
+            "calm": "平静 (Calm)",
+            "fluent": "连贯 (Fluent)",
+            "whisper": "耳语 (Whisper)",
+            "none": "无 (None)",
+            "spacious_echo": "空旷回音",
+            "auditorium_echo": "礼堂广播",
+            "lofi_telephone": "电话失真",
+            "robotic": "电音",
+            "chinese": "中文 (Chinese)",
+            "english": "英文 (English)",
+            "japanese": "日文 (Japanese)",
+            "mono": "单声道",
+            "stereo": "双声道"
+        },
         "modeAsync": "异步模式 (长文本)",
         "labelText": "合成文本",
         "phText": "在此输入文本...",
