--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -8,11 +8,15 @@
         "title": "Key Management",
         "subtitle": "Manage authentication keys for Minimax API",
         "placeholder": "Enter Minimax API Key (sk-...)",
+        "placeholderRemark": "Remark (Optional, max 100 chars)",
         "add": "Add Key",
         "noKeys": "No API keys found. Please add one to start using the workbench.",
         "confirmDelete": "Are you sure you want to delete this key?",
         "alertAddFail": "Failed to add key",
-        "alertDeleteFail": "Failed to delete key"
+        "alertDeleteFail": "Failed to delete key",
+        "alertSetDefaultFail": "Failed to set default key",
+        "default": "Default",
+        "setDefault": "Set Default"
     },
     "voices": {
         "title": "Voice Library",
@@ -54,7 +58,9 @@
         "alertDesignFail": "Design failed",
         "alertSyncFail": "Sync failed",
         "alertDeleteFail": "Failed to delete voice",
-        "syncSuccess": "Sync complete. Added {count} voices."
+        "syncSuccess": "Sync complete. Added {count} voices.",
+        "currentKey": "Current Key",
+        "noDefaultKey": "No Default Key Set"
     },
     "workbench": {
         "btnUploadFile": "Upload File",
