--- a/web/src/locales/zh.json
+++ b/web/src/locales/zh.json
@@ -8,11 +8,15 @@
         "title": "密钥管理",
         "subtitle": "管理 Minimax API 认证密钥",
         "placeholder": "输入 Minimax API 密钥 (sk-...)",
+        "placeholderRemark": "备注 (可选，最多100字)",
         "add": "添加密钥",
         "noKeys": "暂无密钥，请添加密钥以开始使用。",
         "confirmDelete": "确定要删除此密钥吗？",
         "alertAddFail": "添加密钥失败",
-        "alertDeleteFail": "删除密钥失败"
+        "alertDeleteFail": "删除密钥失败",
+        "alertSetDefaultFail": "设置默认失败",
+        "default": "默认",
+        "setDefault": "设为默认"
     },
     "voices": {
         "title": "音色库",
@@ -54,7 +58,9 @@
         "alertDesignFail": "设计失败",
         "alertSyncFail": "同步失败",
         "alertDeleteFail": "删除音色失败",
-        "syncSuccess": "同步完成，新增 {count} 个音色。"
+        "syncSuccess": "同步完成，新增 {count} 个音色。",
+        "currentKey": "当前密钥",
+        "noDefaultKey": "未设置默认密钥"
     },
     "workbench": {
         "btnUploadFile": "上传文件",
