feat(音频管理): 添加音频管理页面及相关功能
实现音频管理页面，包括任务列表展示、筛选功能及任务删除功能
后端添加音频任务筛选接口，前端实现任务状态轮询
移除工作台的历史记录面板，将相关功能迁移至音频管理页面
添加多语言支持及系统语音保护逻辑

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -1,8 +1,38 @@
 {
     "nav": {
         "workbench": "Workbench",
+        "audioManagement": "Audio Management",
         "voices": "Voice Library",
         "keys": "API Keys"
+    },
+    "audioManagement": {
+        "title": "Audio Management",
+        "filters": {
+            "text": "Text Content",
+            "status": "Status",
+            "voice": "Voice",
+            "date": "Date Range",
+            "startDate": "Start Date",
+            "endDate": "End Date",
+            "search": "Search",
+            "reset": "Reset",
+            "allStatus": "All Status",
+            "allVoices": "All Voices"
+        },
+        "columns": {
+            "id": "ID",
+            "content": "Content",
+            "voice": "Voice",
+            "status": "Status",
+            "createdAt": "Created At",
+            "actions": "Actions"
+        },
+        "status": {
+            "success": "Success",
+            "failed": "Failed",
+            "processing": "Processing"
+        },
+        "deleteConfirm": "Are you sure you want to delete this record?"
     },
     "keys": {
         "title": "Key Management",
