--- a/web/src/locales/zh.json
+++ b/web/src/locales/zh.json
@@ -1,8 +1,38 @@
 {
     "nav": {
         "workbench": "工作台",
+        "audioManagement": "音频管理",
         "voices": "音色库",
         "keys": "API密钥"
+    },
+    "audioManagement": {
+        "title": "音频管理",
+        "filters": {
+            "text": "文本内容",
+            "status": "状态",
+            "voice": "音色",
+            "date": "日期范围",
+            "startDate": "开始日期",
+            "endDate": "结束日期",
+            "search": "搜索",
+            "reset": "重置",
+            "allStatus": "全部状态",
+            "allVoices": "全部音色"
+        },
+        "columns": {
+            "id": "ID",
+            "content": "内容",
+            "voice": "音色",
+            "status": "状态",
+            "createdAt": "创建时间",
+            "actions": "操作"
+        },
+        "status": {
+            "success": "成功",
+            "failed": "失败",
+            "processing": "处理中"
+        },
+        "deleteConfirm": "确定要删除这条记录吗？"
     },
     "keys": {
         "title": "密钥管理",
