feat(ui): 实现响应式布局、暗黑模式和多语言支持
添加响应式设计支持移动端，引入暗黑模式切换功能，完善多语言配置
新增底部导航组件和设计系统文档，重构样式系统使用CSS变量
优化语音列表界面，增加音频播放控制和分类标签

--- a/web/src/locales/zh.json
+++ b/web/src/locales/zh.json
@@ -96,6 +96,9 @@
         "btnUploadFile": "上传文件",
         "btnUploading": "上传中...",
         "title": "Minimax 语音合成工作台",
+        "sectionBasic": "基础配置",
+        "sectionInput": "文本输入",
+        "sectionParameters": "参数调节",
         "sectionCommon": "常用设置",
         "sectionAdvanced": "高级设置",
         "inputType": {
@@ -111,6 +114,7 @@
         "labelPitch": "语调 (Pitch)",
         "labelEmotion": "情感 (Emotion)",
         "labelLangBoost": "语种增强",
+        "labelAudioSetting": "音频设置",
         "labelSampleRate": "采样率",
         "labelBitrate": "比特率",
         "labelFormat": "格式",
