feat: 优化UI界面样式并添加多语言支持
- 更新全局样式和设计令牌
- 改进侧边栏和导航栏的交互效果
- 为工作台页面添加多语言支持
- 优化表单输入和滑块控件的样式
- 添加阴影和边框效果增强视觉层次
- 改进响应式设计以适应不同屏幕尺寸

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -96,6 +96,7 @@
         "btnUploadFile": "Upload File",
         "btnUploading": "Uploading...",
         "title": "Minimax Voice Workbench",
+        "subtitle": "Create high-quality speech with Minimax models",
         "sectionCommon": "Common Settings",
         "sectionAdvanced": "Advanced Settings",
         "inputType": {
