feat(ui): 改进语音克隆表单的UI和交互体验
- 重构文件选择器组件，添加文件选择状态显示
- 将提示音频和文本字段组合为关联字段组
- 优化移动端布局和响应式设计
- 添加多语言支持的新字段
- 修复页面溢出和滚动问题

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -64,6 +64,8 @@
         "labelPromptFile": "Prompt Audio (Optional)",
         "labelPromptText": "Prompt Text (Optional)",
         "phPromptText": "Text corresponding to prompt audio...",
+        "pairPromptTitle": "Prompt audio + prompt text (Optional)",
+        "pairPromptSubtitle": "These two fields are a pair: you can fill either one or both.",
         "hintPromptFile": "Upload reference audio < 8s to enhance similarity",
         "labelDemoText": "Demo Text (Optional)",
         "phDemoText": "Text for demo generation (max 1000 chars)...",
@@ -77,6 +79,8 @@
         "labelPreview": "Preview Text",
         "phPreview": "Text to generate preview audio...",
         "hintSample": "Upload a clear audio sample (mp3/wav) > 10s",
+        "selectFile": "Select file",
+        "noFileSelected": "No file selected",
         "cancel": "Cancel",
         "startCloning": "Start Cloning",
         "startDesigning": "Start Designing",
