--- a/web/src/locales/zh.json
+++ b/web/src/locales/zh.json
@@ -64,6 +64,8 @@
         "labelPromptFile": "示例音频 (可选)",
         "labelPromptText": "示例文本 (可选)",
         "phPromptText": "示例音频对应的文本...",
+        "pairPromptTitle": "示例音频 + 示例文本（可选）",
+        "pairPromptSubtitle": "这两个字段作为一组使用：可只填其一，也可同时填写。",
         "hintPromptFile": "上传参考音频 < 8秒，可增强相似度",
         "labelDemoText": "试听文本 (可选)",
         "phDemoText": "用于生成试听音频的文本 (最多1000字)...",
@@ -77,6 +79,8 @@
         "labelPreview": "试听文本",
         "phPreview": "用于生成试听音频的文本...",
         "hintSample": "上传清晰的语音样本 (mp3/wav) > 10秒",
+        "selectFile": "选择文件",
+        "noFileSelected": "未选择任何文件",
         "cancel": "取消",
         "startCloning": "开始复刻",
         "startDesigning": "开始设计",
