feat(workbench): 添加英语文本规范化选项和表单持久化功能
添加英语文本规范化开关选项，支持音频格式和声道选择
实现表单状态本地存储功能，优化音频参数选项展示
添加工具提示样式和响应式布局改进

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -138,11 +138,15 @@
             "pitch": "Pitch [-12, 12]",
             "emotion": "Control speech emotion",
             "langBoost": "Boost specific language/dialect",
+            "englishNormalization": "Enable English text normalization (improves number reading, adds small latency)",
             "watermark": "Add audio rhythm marker at end",
             "vmPitch": "Range [-100, 100]",
             "vmIntensity": "Range [-100, 100]",
             "vmTimbre": "Range [-100, 100]",
             "pronunciationDict": "Comma separated, e.g. \"word/pron\", \"word2/pron2\""
+        },
+        "hints": {
+            "channelDesc": "1 for mono, 2 for stereo"
         },
         "phPronunciationDict": "e.g. \"word/pron\", \"word2/pron2\"",
         "options": {
