feat(语音管理): 新增语音收藏功能及搜索优化
- 添加语音收藏功能，支持在语音列表和选择器中收藏常用语音
- 新增语音搜索功能，支持实时搜索和高亮匹配文本
- 实现语音选择器组件，优化语音选择体验
- 更新多语言文件，添加搜索占位符文本
- 重构语音列表界面，增加收藏分类和搜索栏
- 修改后端API字段名Watermark为AigcWatermark以保持一致性

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -94,7 +94,8 @@
         "alertDeleteFail": "Failed to delete voice",
         "syncSuccess": "Sync complete. Added {count} voices.",
         "currentKey": "Current Key",
-        "noDefaultKey": "No Default Key Set"
+        "noDefaultKey": "No Default Key Set",
+        "searchPlaceholder": "Search voices..."
     },
     "workbench": {
         "btnUploadFile": "Upload File",
