--- a/web/src/locales/zh.json
+++ b/web/src/locales/zh.json
@@ -94,7 +94,8 @@
         "alertDeleteFail": "删除音色失败",
         "syncSuccess": "同步完成，新增 {count} 个音色。",
         "currentKey": "当前密钥",
-        "noDefaultKey": "未设置默认密钥"
+        "noDefaultKey": "未设置默认密钥",
+        "searchPlaceholder": "搜索音色..."
     },
     "workbench": {
         "btnUploadFile": "上传文件",
