feat(UI): 改进工具提示和语音选择器交互
重构工具提示实现为动态定位组件，增强语音选择器的交互体验
更新中文翻译文案，增加更多配置参数的详细说明
优化搜索输入框的样式和布局

--- a/web/src/locales/zh.json
+++ b/web/src/locales/zh.json
@@ -134,21 +134,26 @@
         "labelVmEffects": "音效",
         "labelPronunciationDict": "多音字字典",
         "tips": {
-            "model": "选择语音合成模型版本",
-            "text": "待合成的文本内容，最长5万字符",
-            "textFileId": "待合成的文本文件ID，支持txt/zip",
-            "voiceId": "选择音色",
-            "speed": "语速 [0.5, 2.0]",
-            "vol": "音量 (0, 10]",
-            "pitch": "语调 [-12, 12]",
-            "emotion": "控制合成语音的情绪",
-            "langBoost": "增强特定语种/方言识别",
-            "englishNormalization": "启用英语文本规范化（可提升数字阅读性能，但会增加少量延迟）",
-            "watermark": "音频末尾添加节奏标识",
-            "vmPitch": "范围 [-100, 100], 低沉/明亮",
-            "vmIntensity": "范围 [-100, 100], 刚劲/轻柔",
-            "vmTimbre": "范围 [-100, 100], 浑厚/清脆",
-            "pronunciationDict": "多音字纠正，使用逗号分隔，例如：\"重/chong2\", \"长/zhang3\""
+            "model": "语音合成模型版本（默认：speech-2.6-hd）",
+            "text": "待合成的文本内容（默认：空；最长 50,000 字符）",
+            "textFileId": "待合成的文本文件 ID（用于长文本/文件模式；默认：空；支持 txt/zip 上传后获得）",
+            "voiceId": "音色 ID（voice_setting.voice_id；默认：空，建议选择一个音色）",
+            "speed": "语速 speed（voice_setting.speed；默认：1.0；范围 [0.5, 2.0]）",
+            "vol": "音量 vol（voice_setting.vol；默认：1.0；范围 (0, 10]）",
+            "pitch": "语调 pitch（voice_setting.pitch；默认：0；范围 [-12, 12]）",
+            "emotion": "情感 emotion（默认：自动/空；用于控制合成语音的情绪）",
+            "langBoost": "语种增强 language_boost（默认：auto）",
+            "englishNormalization": "英文规范化 english_normalization（默认：false；可提升英文数字等读法一致性，但会增加少量延迟）",
+            "watermark": "AIGC 水印 watermark（默认：false；在音频末尾添加节奏标识）",
+            "sampleRate": "采样率 audio_setting.audio_sample_rate（默认：32000）",
+            "bitrate": "比特率 audio_setting.bitrate（默认：128000；仅 mp3 生效）",
+            "format": "音频格式 audio_setting.format（默认：mp3）",
+            "channel": "声道 audio_setting.channel（默认：1；1=单声道，2=双声道）",
+            "vmPitch": "音高调整 voice_modify.pitch（默认：0；范围 [-100, 100]，低沉/明亮）",
+            "vmIntensity": "强度调整 voice_modify.intensity（默认：0；范围 [-100, 100]，刚劲/轻柔）",
+            "vmTimbre": "音色调整 voice_modify.timbre（默认：0；范围 [-100, 100]，浑厚/清脆）",
+            "vmEffects": "音效 voice_modify.sound_effects（默认：空；可选如 spacious_echo 等）",
+            "pronunciationDict": "多音字字典 pronunciation_dict（默认：空；示例：\"燕少飞/(yan4)(shao3)(fei1)\", \"omg/oh my god\"）"
         },
         "hints": {
             "channelDesc": "1表示单声道，2表示双声道"
