feat(workbench): 添加重置参数按钮功能
添加重置按钮用于将表单参数恢复为默认值，同时更新了中英文翻译和样式布局。使用 RotateCcw 图标表示重置操作，并确保按钮在加载状态下禁用。

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -175,6 +175,7 @@
         "modeAsync": "Async Mode (Long Text)",
         "labelText": "Text to Speech",
         "phText": "Enter text here...",
+        "btnReset": "Reset Params",
         "btnGenerate": "Generate Speech",
         "btnGenerating": "Generating...",
         "historyTitle": "Generation History",
