feat: 添加智能音频播放器并支持多语言选项
- 新增 SmartAudioPlayer 组件，支持 PCM 格式自动转换为 WAV
- 扩展语音合成任务模型，添加音频格式、采样率和声道信息
- 增加多语言选项支持，更新中英文翻译文件
- 优化音频管理页面，使用新播放器替换原生 audio 标签
- 改进任务状态检查逻辑，添加并发控制
- 添加任务提交后的确认对话框

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -167,14 +167,51 @@
             "lofi_telephone": "Lo-Fi Telephone",
             "robotic": "Robotic",
             "chinese": "Chinese",
+            "chinese_yue": "Cantonese",
             "english": "English",
             "japanese": "Japanese",
+            "arabic": "Arabic",
+            "russian": "Russian",
+            "spanish": "Spanish",
+            "french": "French",
+            "portuguese": "Portuguese",
+            "german": "German",
+            "turkish": "Turkish",
+            "dutch": "Dutch",
+            "ukrainian": "Ukrainian",
+            "vietnamese": "Vietnamese",
+            "indonesian": "Indonesian",
+            "italian": "Italian",
+            "korean": "Korean",
+            "thai": "Thai",
+            "polish": "Polish",
+            "romanian": "Romanian",
+            "greek": "Greek",
+            "czech": "Czech",
+            "finnish": "Finnish",
+            "hindi": "Hindi",
+            "bulgarian": "Bulgarian",
+            "danish": "Danish",
+            "hebrew": "Hebrew",
+            "malay": "Malay",
+            "persian": "Persian",
+            "slovak": "Slovak",
+            "swedish": "Swedish",
+            "croatian": "Croatian",
+            "filipino": "Filipino",
+            "hungarian": "Hungarian",
+            "norwegian": "Norwegian",
+            "slovenian": "Slovenian",
+            "catalan": "Catalan",
+            "nynorsk": "Nynorsk",
+            "tamil": "Tamil",
+            "afrikaans": "Afrikaans",
             "mono": "Mono",
             "stereo": "Stereo"
         },
         "modeAsync": "Async Mode (Long Text)",
         "labelText": "Text to Speech",
-        "phText": "Enter text here...",
+        "phText": "Start typing here to generate your personalized audio.\n💡 Insert '<#0.5#>' between sentences to add a 0.5s pause. Adjust the duration as needed.",
         "btnReset": "Reset Params",
         "btnGenerate": "Generate Speech",
         "btnGenerating": "Generating...",
