--- a/web/src/locales/zh.json
+++ b/web/src/locales/zh.json
@@ -176,14 +176,51 @@
             "lofi_telephone": "电话失真",
             "robotic": "电音",
             "chinese": "中文 (Chinese)",
+            "chinese_yue": "粤语 (Cantonese)",
             "english": "英文 (English)",
             "japanese": "日文 (Japanese)",
+            "arabic": "阿拉伯语 (Arabic)",
+            "russian": "俄语 (Russian)",
+            "spanish": "西班牙语 (Spanish)",
+            "french": "法语 (French)",
+            "portuguese": "葡萄牙语 (Portuguese)",
+            "german": "德语 (German)",
+            "turkish": "土耳其语 (Turkish)",
+            "dutch": "荷兰语 (Dutch)",
+            "ukrainian": "乌克兰语 (Ukrainian)",
+            "vietnamese": "越南语 (Vietnamese)",
+            "indonesian": "印尼语 (Indonesian)",
+            "italian": "意大利语 (Italian)",
+            "korean": "韩语 (Korean)",
+            "thai": "泰语 (Thai)",
+            "polish": "波兰语 (Polish)",
+            "romanian": "罗马尼亚语 (Romanian)",
+            "greek": "希腊语 (Greek)",
+            "czech": "捷克语 (Czech)",
+            "finnish": "芬兰语 (Finnish)",
+            "hindi": "印地语 (Hindi)",
+            "bulgarian": "保加利亚语 (Bulgarian)",
+            "danish": "丹麦语 (Danish)",
+            "hebrew": "希伯来语 (Hebrew)",
+            "malay": "马来语 (Malay)",
+            "persian": "波斯语 (Persian)",
+            "slovak": "斯洛伐克语 (Slovak)",
+            "swedish": "瑞典语 (Swedish)",
+            "croatian": "克罗地亚语 (Croatian)",
+            "filipino": "菲律宾语 (Filipino)",
+            "hungarian": "匈牙利语 (Hungarian)",
+            "norwegian": "挪威语 (Norwegian)",
+            "slovenian": "斯洛文尼亚语 (Slovenian)",
+            "catalan": "加泰罗尼亚语 (Catalan)",
+            "nynorsk": "新挪威语 (Nynorsk)",
+            "tamil": "泰米尔语 (Tamil)",
+            "afrikaans": "南非荷兰语 (Afrikaans)",
             "mono": "单声道",
             "stereo": "双声道"
         },
         "modeAsync": "异步模式 (长文本)",
         "labelText": "合成文本",
-        "phText": "在此输入文本...",
+        "phText": "在此处开始输入文字，生成您的个性化音频。\n💡 在句子之间插入'<#0.5#>'，可添加0.5s的停顿。根据您的需求调节停顿时长。",
         "btnReset": "重置参数",
         "btnGenerate": "生成语音",
         "btnGenerating": "生成中...",
